# de-zoomcamp-2026

./: .gitignore
module-02-workflow-orchestration/: README.md  docker-compose.yml
module-02-workflow-orchestration/flows/: 06_gcp_kv.yaml  07_gcp_setup.yaml
module-02-workflow-orchestration/homework/: README.md
module-03-data-warehouse/: README.md
module-03-data-warehouse/homework/: README.md  load_yellow_taxi_data.py
module-03-data-warehouse/scripts/: load_taxi_csv_to_gcs.py
module-03-data-warehouse/sql/: big_query_ml.sql  bigquery_green_taxi_setup.sql  bigquery_yellow_taxi_setup.sql
module-04-analytics-engineering/: README.md
module-04-analytics-engineering/homework/: README.md
module-04-analytics-engineering/scripts/: load_fhv_2019_to_gcs.py
module-04-analytics-engineering/taxi_rides_ny/models/staging/: sources.yml  stg_fhv_tripdata.sql
module-05-data-platforms/: README.md
module-05-data-platforms/homework/: README.md
module-05-data-platforms/my-taxi-pipeline/: pipeline-summary.md
module-05-data-platforms/my-taxi-pipeline/pipeline/: pipeline.yml
module-05-data-platforms/my-taxi-pipeline/pipeline/assets/ingestion/: requirements.txt  trips.py
module-05-data-platforms/my-taxi-pipeline/pipeline/assets/reports/: trips_report.sql
module-05-data-platforms/my-taxi-pipeline/pipeline/assets/staging/: trips.sql
workshop-dlt/: README.md  dlt_Pipeline_Overview.ipynb
workshop-dlt/homework/: README.md
workshop-dlt/my-dlt-pipeline/: author_analysis.py  open_library_pipeline.py  pyproject.toml
workshop-dlt/taxi-pipeline/: pyproject.toml
